[package]
name = "wgpu_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = {version= "1.22.0", features=["derive"]}
env_logger = "0.11.7"
image = {version="0.25.5", default-features = false, features = ["png","jpeg"]}
log = "0.4.26"
pollster = "0.4.0"
wgpu = "24.0.1"
winit = {version= "0.30.9",  features = ["rwh_05"]}
