[package]
name = "wgpu_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = {version= "1.22.0", features=["derive"]}
cgmath = "0.18.0"
env_logger = "0.11.7"
fs_extra = "1.3.0"
glob = "0.3.2"
image = {version="0.25.5", default-features = false, features = ["png","jpeg"]}
instant = "0.1.13"
json = "0.12.4"
log = "0.4.26"
pollster = "0.4.0"
time-test = "0.3.0"
tobj ={version= "4.0.3"}
wgpu = "24.0.1"
winit = {version= "0.30.9",  features = ["rwh_05"]}


